--- a/assets/scss/molecules/_marketing-popup.scss
+++ b/assets/scss/molecules/_marketing-popup.scss
@@ -43,6 +43,11 @@
 				margin: 0;
 				line-height: 1.3;
 				font-weight: normal;
+				
+				strong {
+					color: $blue-dark;
+					font-weight: bold;
+				}
 			}
 			
 			.version {
