Addons page chages

--- a/assets/css/atum-addons.css
+++ b/assets/css/atum-addons.css
@@ -2407,6 +2407,200 @@ input[type=button].btn-block {
   }
 }
 
+.alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.alert i {
+  margin-right: 8px;
+  margin-left: -8px;
+  font-size: 17px;
+}
+
+.alert-heading {
+  color: inherit;
+}
+
+.alert-link {
+  font-weight: 700;
+}
+
+.alert-dismissible {
+  padding-right: 3.8125rem;
+}
+.alert-dismissible .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.75rem 1.25rem;
+  color: inherit;
+}
+
+.alert-primary {
+  color: #006072;
+  background-color: #ccf1f8;
+  border-color: #b8ebf5;
+}
+.alert-primary hr {
+  border-top-color: #a2e5f2;
+}
+.alert-primary .alert-link {
+  color: #00353f;
+}
+
+.alert-secondary {
+  color: #7c5b00;
+  background-color: #fcefcc;
+  border-color: #fbe9b8;
+}
+.alert-secondary hr {
+  border-top-color: #fae2a0;
+}
+.alert-secondary .alert-link {
+  color: #493600;
+}
+
+.alert-tertiary {
+  color: #37670f;
+  background-color: #e1f4d2;
+  border-color: #d5efc0;
+}
+.alert-tertiary hr {
+  border-top-color: #c7eaac;
+}
+.alert-tertiary .alert-link {
+  color: #1f3a09;
+}
+
+.alert-success {
+  color: #37670f;
+  background-color: #e1f4d2;
+  border-color: #d5efc0;
+}
+.alert-success hr {
+  border-top-color: #c7eaac;
+}
+.alert-success .alert-link {
+  color: #1f3a09;
+}
+
+.alert-main {
+  color: #006072;
+  background-color: #ccf1f8;
+  border-color: #b8ebf5;
+}
+.alert-main hr {
+  border-top-color: #a2e5f2;
+}
+.alert-main .alert-link {
+  color: #00353f;
+}
+
+.alert-info {
+  color: #76797f;
+  background-color: #f9fafd;
+  border-color: #f7f9fc;
+}
+.alert-info hr {
+  border-top-color: #e4ebf5;
+}
+.alert-info .alert-link {
+  color: #5d6065;
+}
+
+.alert-warning {
+  color: #7c5b00;
+  background-color: #fcefcc;
+  border-color: #fbe9b8;
+}
+.alert-warning hr {
+  border-top-color: #fae2a0;
+}
+.alert-warning .alert-link {
+  color: #493600;
+}
+
+.alert-danger {
+  color: #852525;
+  background-color: #ffdada;
+  border-color: #ffcccc;
+}
+.alert-danger hr {
+  border-top-color: #ffb3b3;
+}
+.alert-danger .alert-link {
+  color: #5d1a1a;
+}
+
+.alert-light {
+  color: #818182;
+  background-color: #fefefe;
+  border-color: #fdfdfe;
+}
+.alert-light hr {
+  border-top-color: #ececf6;
+}
+.alert-light .alert-link {
+  color: #686868;
+}
+
+.alert-dark {
+  color: #1b1e21;
+  background-color: #d6d8d9;
+  border-color: #c6c8ca;
+}
+.alert-dark hr {
+  border-top-color: #b9bbbe;
+}
+.alert-dark .alert-link {
+  color: #040505;
+}
+
+.alert-purple-pl {
+  color: #4c2d6a;
+  background-color: #e9ddf5;
+  border-color: #e1d0f1;
+}
+.alert-purple-pl hr {
+  border-top-color: #d4bceb;
+}
+.alert-purple-pl .alert-link {
+  color: #321e46;
+}
+
+.alert-gray {
+  color: #383d41;
+  background-color: #e2e3e5;
+  border-color: #d6d8db;
+}
+.alert-gray hr {
+  border-top-color: #c8cbcf;
+}
+.alert-gray .alert-link {
+  color: #202326;
+}
+
+.alert-default {
+  color: #5a5e62;
+  background-color: #eff0f2;
+  border-color: #e8eaed;
+}
+.alert-default hr {
+  border-top-color: #dadde2;
+}
+.alert-default .alert-link {
+  color: #424547;
+}
+
 #wpfooter {
   padding-top: 0;
   display: none;
@@ -2591,7 +2785,7 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
 }
 .atum-addons .atum-addon .atum-loading {
   right: 152px;
-  top: 3px;
+  bottom: 3px;
   width: 18px;
   height: 18px;
   border: 3px solid rgba(0, 184, 219, 0.25);
@@ -2652,6 +2846,9 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
 .atum-addons .addon-header .label.label-warning {
   background-color: #EFAF00;
 }
+.atum-addons .addon-description {
+  overflow-y: auto;
+}
 .atum-addons .addon-description, .atum-addons p {
   margin: 0;
   -webkit-box-flex: 1;
@@ -2659,6 +2856,11 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
           flex-grow: 1;
   font-size: 15px;
   color: var(--bm_text_color);
+}
+.atum-addons .alert {
+  font-size: 12px;
+  padding: 0.3rem calc(0.75rem + 8px);
+  margin-bottom: 0.3rem;
 }
 .atum-addons .addon-footer .actions .btn {
   font-size: 0.75rem;
@@ -2714,7 +2916,7 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
 }
 .atum-addons .addon-footer .license-info .license-key, .atum-addons .addon-footer .license-info .expires {
   background-color: var(--atum-table-bg2);
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 400;
   line-height: 1.47;
   padding: 4px 13px;
