--- a/assets/scss/atum-addons.scss
+++ b/assets/scss/atum-addons.scss
@@ -13,6 +13,7 @@
 @import "atoms/tooltip";
 
 @import "molecules/sweet-alert";
+@import "molecules/alert";
 @import "molecules/atum-footer";
 
 @import "organisms/pages/addons";
